--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,31 +14,85 @@ sd
   <div class="ethics-container" fxLayout="row" fxLayoutAlign="space-evenly center">
     <div class="ethic" fxLayout="column" fxLayoutAlign="space-evenly center">
         <div class="hexagon">
-          <div class="icon" fxLayout="row" fxLayoutAlign="space-evenly center">ss</div>
+          <div class="icon" fxLayout="row" fxLayoutAlign="space-evenly center"><fa name="tachometer" size="3x"></fa></div>
         </div>
       <div class="title">Fast</div>
       <div class="message">Fast loading times and lage free interaction, my highest priority</div>
     </div>
     <div class="ethic" fxLayout="column" fxLayoutAlign="space-evenly center">
         <div class="hexagon">
-          <div class="icon" fxLayout="row" fxLayoutAlign="space-evenly center">ss</div>
+          <div class="icon" fxLayout="row" fxLayoutAlign="space-evenly center"><fa name="desktop" size="3x"></fa></div>
         </div>
       <div class="title">Responsive</div>
       <div class="message">Fast loading times and lage free interaction, my highest priority</div>
     </div>
     <div class="ethic" fxLayout="column" fxLayoutAlign="space-evenly center">
         <div class="hexagon">
-          <div class="icon" fxLayout="row" fxLayoutAlign="space-evenly center">ss</div>
+          <div class="icon" fxLayout="row" fxLayoutAlign="space-evenly center"><fa name="users" size="3x"></fa></div>
         </div>
       <div class="title">Intuitive</div>
       <div class="message">Fast loading times and lage free interaction, my highest priority</div>
     </div>
     <div class="ethic" fxLayout="column" fxLayoutAlign="space-evenly center">
         <div class="hexagon">
-          <div class="icon" fxLayout="row" fxLayoutAlign="space-evenly center">ss</div>
+          <div class="icon" fxLayout="row" fxLayoutAlign="space-evenly center"><fa name="rocket" size="3x"></fa></div>
         </div>
       <div class="title">Dynamic</div>
       <div class="message">Fast loading times and lage free interaction, my highest priority</div>
+    </div>
+  </div>
+  <div class="info" fxLayout="column" fxLayoutAlign="space-evenly center">
+    <div class="main-skills w100" fxLayout="row" fxLayoutAlign="space-evenly center">
+        <div class="bio" fxFlex="50">
+            ss
+          </div>
+          <div class="skills" fxFlex>
+            <div class="bar-list">
+              <div class="bar-outline" fxLayout="row" fxLayoutAlign="start center">
+                <div class="skill-title" fxFlex="20">
+                  HTML5/CSS
+                </div>
+                <progress-bar [progress]="80" [color]="'#488aff'">
+                  </progress-bar>
+              </div>
+              <div class="bar-outline" fxLayout="row" fxLayoutAlign="start center">
+                <div class="skill-title" fxFlex="20">
+                  Angular
+                </div>
+                <progress-bar [progress]="70" [color]="'#488aff'">
+                  </progress-bar>
+              </div>
+              <div class="bar-outline" fxLayout="row" fxLayoutAlign="start center">
+                <div class="skill-title" fxFlex="20">
+                  Python / Django
+                </div>
+                <progress-bar [progress]="70" [color]="'#488aff'">
+                  </progress-bar>
+              </div>
+              <div class="bar-outline" fxLayout="row" fxLayoutAlign="start center">
+                <div class="skill-title" fxFlex="20">
+                  C++ / C
+                </div>
+                <progress-bar [progress]="50" [color]="'#488aff'">
+                  </progress-bar>
+              </div>
+            </div>
+          </div>
+    </div>
+    <div class="other-skills w100" fxLayout="row" fxLayoutAlign="space-evenly center">
+        <i class="devicon-github-plain-wordmark"></i>
+        <i class="devicon-heroku-original-wordmark"></i>
+        <i class="devicon-jquery-plain-wordmark"></i>
+        <i class="devicon-mongodb-plain-wordmark"></i>
+        <i class="devicon-nodejs-plain"></i>
+        <i class="devicon-bootstrap-plain-wordmark"></i>
+        <i class="devicon-java-plain-wordmark"></i>
+        <i class="devicon-swift-plain"></i>
+        <i class="devicon-visualstudio-plain"></i>
+        <i class="devicon-wordpress-plain-wordmark"></i>
+        <i class="devicon-sass-original"></i>
+        <i class="devicon-typescript-plain"></i>
+        <i class="devicon-ubuntu-plain-wordmark"></i>
     </div>
   </div>
 </section>
