--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -22,6 +22,7 @@
     text-transform: uppercase;
     text-align: center;
     padding-bottom: 100px;
+    font-size: 30pt;
 }
 
 .about {
@@ -50,7 +51,7 @@
     height: 57.74px;
     background-color: #64C7CC;
     margin: 28.87px 0;
-  }
+}
   
 .hexagon:before, .hexagon:after {
     content: "";
@@ -77,4 +78,24 @@
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+.info {
+    padding: 50px 150px;
+}
+
+.bar-list > .bar-outline {
+    margin-bottom: 15px;
+}
+
+.bar-list .skill-title {
+    padding-right: 10px;
+}
+
+.other-skills {
+    padding-top: 50px;
+}
+
+.other-skills > i {
+    font-size: 60px;
 }
