--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,7 @@ html, body {
     width: 100%;
     height: 100%;
     font-family: 'Raleway', sans-serif;
+    color: white;
 }
 
 .w100 {
@@ -25,4 +26,19 @@ progress-bar {
 
 .progress-outer {
     margin: 0 !important;
+}
+
+.fixed {
+    position: fixed !important;
+    top: 0 !important;
+    left: 0 !important;
+    z-index: 1000;
+}
+
+.charcoal {
+    background: #252525 !important;
+}
+
+.text-center {
+    text-align: center;
 }
