--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -6,6 +6,33 @@
     max-height: 100vh;
 }
 
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 100vh;
+    max-height: 100vh;
+    background-color: rgba(0, 0, 0, .5)
+}
+
+.nav-icon {
+    margin-bottom: 50px;
+    color: rgba(255, 255, 255, .5) !important;
+    cursor: pointer;
+    -webkit-transition: all 0.25s ease;
+    -moz-transition: all 0.25s ease;
+    -o-transition: all 0.25s ease;
+    transition: all 0.25s ease;
+}
+
+.nav-icon:hover {
+    color: rgba( 255, 255, 255) !important
+}
+
+.text-overlay {
+    z-index: 1000;
+}
+
 .navbar {
     background-color: #101010;
     height: 40px;
