--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,17 @@
 <div class="page-container">
-  <section class="intro-banner" id="home" fxLayout="row" fxLayoutAlign="space-evenly center">
-    sd
+  <section class="intro-banner w100" id="home" fxLayout="column" fxLayoutAlign="center center">
+    <div class="overlay w100" fxLayout="column" fxLayoutAlign="end center">
+        <a class="nav-icon" [ngx-scroll-to]="'#about'"><fa name="arrow-circle-down" size="3x"></fa></a>
+    </div>
+    <div class="text-overlay line1" fxLayout="row" fxLayoutAlign="center center">
+      <span class="text-center" typingAnimation [typeSpeed]="50" [hideCursorOnComplete]="true" [startDelay]="000" (complete)="TypingComplete(1)">Hello, my name is Anthony Velazquez</span>
+    </div>
+    <div class="text-overlay line2" fxLayout="row" fxLayoutAlign="center center">
+      <span class="text-center" typingAnimation [typeSpeed]="50" [hideCursorOnComplete]="true" [condition]="LoadLine2" (complete)="TypingComplete(2)">Hello, my name is Anthony Velazquez</span>
+    </div>
+    <div class="text-overlay line3" fxLayout="row" fxLayoutAlign="center center">
+      <span class="text-center" typingAnimation [typeSpeed]="50" [hideCursorOnComplete]="false" [condition]="LoadLine3" (complete)="TypingComplete(3)">Hello, my name is Anthony Velazquez</span>
+    </div>
   </section>
   <div class="navbar w100" fxLayout="row" fxLayoutAlign="space-evenly center" [ngClass]="{'fixed': FixedNavbar}" #navbar>
     <a [ngx-scroll-to]="'#home'">Home</a>
@@ -166,7 +177,7 @@
         </div>
       </ng-template>
       <ng-template ngbSlide>
-        <img [src]="images[2]" alt="Random third slide">
+        <!-- <img [src]="images[2]" alt="Random third slide"> -->
         <div class="carousel-caption">
           <h3>Third slide label</h3>
           <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
