--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -175,6 +175,22 @@
     font-weight: 700;
 }
 
+.name > a {
+    color: black;
+    text-decoration: none;
+    transition: all 0.15s ease-in-out;
+    -moz-transition: all 0.15s ease-in-out;
+    -webkit-transition: all 0.15s ease-in-out;
+}
+
+.name > a:hover {
+    color: gray;
+}
+
+.job {
+    margin-bottom: 25px;
+}
+
 .job > ul {
     margin-left: 25px;
     margin-bottom: 0px;
