--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -223,3 +223,98 @@
 .portfolio .other {
     margin-top: 50px;
 }
+
+.card-list {
+    margin-top: 25px;
+    width: 1200px;
+    max-width: 1200px;
+    min-width: 1200px;
+}
+
+.card-list > .card {
+    width: 390px;
+    height: 300px;
+    border: 0;
+    border-radius: 0px;
+    background: url("http://findmatthew.com/style/../img/thumb-3.jpg")
+}
+
+.contact-form {
+    margin-top: 50px;
+}
+
+form {
+    width: 500px;
+}
+
+form > input {
+    width: 100%;
+    box-sizing: border-box;
+    outline: none;
+    border: 0;
+    padding: 10px 15px;
+    background: #1E242C;
+    font-size: 12pt;
+    margin-bottom: 3px;
+    color: #fff;
+}
+
+textarea {
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+    outline: none;
+    border: 0;
+    padding: 10px 15px;
+    background: #1E242C;
+    font-size: 12pt;
+    color: #fff;
+    margin-bottom: 5px;
+    min-height: 150px;
+    height: 150px;
+}
+
+.contact-btn {
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+    outline: none;
+    border: 0;
+    padding: 10px 15px;
+    background: #1E242C;
+    font-size: 12pt;
+    color: #fff;
+    margin-bottom: 5px;
+}
+
+.footer {
+    padding-top: 75px;
+    position: relative;
+}
+
+.footer .top-btn {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    left: calc(50% - 25px);
+    top: -25px;
+    background-color: #1E242C;
+    border: 1px solid white;
+    cursor: pointer;
+}
+
+.social-list > a {
+    color: white;
+    margin: 10px;
+    width: 50px;
+    height: 50px;
+    border: 1px solid white;
+    background-color: #1E242C;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.copyright {
+    margin-top: 15px;
+    margin-bottom: 25px;
+}
