--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -185,13 +185,13 @@
     <div class="other" fxLayout="column" fxLayoutAlign="center center">
       <h2 class="text-center">Other Projects</h2>
       <div class="card-list" fxLayout="row wrap" fxLayoutAlign="center center">
-        <div class="card">
+        <div class="card" (click)="open(content)">
 
         </div>
-        <div class="card">
+        <div class="card" (click)="open(content)">
           
           </div>
-          <div class="card">
+          <div class="card" (click)="open(content)">
           
             </div>
       </div>
@@ -229,3 +229,36 @@
     </div>
   </section>
 </div>
+
+<ng-template #content let-c="close" let-d="dismiss">
+    <div class="modal-body">
+      <ngb-carousel>
+        <ng-template ngbSlide>
+          <img src="http://findmatthew.com/img/slides/roambi-1.jpg" alt="Random first slide">
+          <div class="carousel-caption">
+            <h3>First slide label</h3>
+            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+          </div>
+        </ng-template>
+        <ng-template ngbSlide>
+          <img src="http://findmatthew.com/img/slides/roambi-1.jpg" alt="Random second slide">
+          <div class="carousel-caption">
+            <h3>Second slide label</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+        </ng-template>
+        <ng-template ngbSlide>
+          <img src="http://findmatthew.com/img/slides/roambi-1.jpg" alt="Random third slide">
+          <div class="carousel-caption">
+            <h3>Third slide label</h3>
+            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+          </div>
+        </ng-template>
+      </ngb-carousel>
+      <div class="separator w100"></div>
+      <div class="info">
+        ss
+      </div>
+    </div>
+  </ng-template>
+  
