--- a/src/styles.css
+++ b/src/styles.css
@@ -54,3 +54,11 @@ progress-bar {
 .line3 span {
     font-size: 20px !important;
 }
+
+.project-modal .modal-dialog {
+    max-width: 700px !important;
+}
+
+.project-modal .modal-body {
+    padding: 0 !important;
+}
